// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dialog Footer renders different Sizes 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE fhiliT"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw frmmJi"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw iqdPEM"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-hQJPdd buDptQ"
      >
        <button
          className="sc-NqARw leQjyI"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-jlObWd jxAGSv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE fLCEFX"
      size="small"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw kgkLd"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw cJIYYf"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-hQJPdd buDptQ"
      >
        <button
          className="sc-NqARw ekrder"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-jlObWd jxAGSv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dialog Footer renders with Button SM 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw frmmJi"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw frmmJi"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw iqdPEM"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw frmmJi"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw iqdPEM"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-hQJPdd buDptQ"
      >
        <button
          className="sc-NqARw leQjyI"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-jlObWd jxAGSv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw frmmJi"
            size="small"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-hQJPdd buDptQ"
      >
        <button
          className="sc-NqARw leQjyI"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-jlObWd jxAGSv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw iqdPEM"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw iqdPEM"
            size="small"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-hQJPdd buDptQ"
      >
        <button
          className="sc-NqARw leQjyI"
          size="small"
          variant="secondary"
        >
          <div
            className="sc-jlObWd jxAGSv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;

exports[`Dialog Footer renders with Button XS 1`] = `
<div
  className="flex flex-col"
>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw kgkLd"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw kgkLd"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw cJIYYf"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw kgkLd"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw cJIYYf"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-hQJPdd buDptQ"
      >
        <button
          className="sc-NqARw ekrder"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-jlObWd jxAGSv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw kgkLd"
            size="xsmall"
            variant="primary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-hQJPdd buDptQ"
      >
        <button
          className="sc-NqARw ekrder"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-jlObWd jxAGSv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw cJIYYf"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-96 mb-4"
  >
    <div
      className="sc-XgeeE cQmfkZ"
    >
      <div
        className="sc-jvZVje hYDpoj"
      >
        <div
          className="sc-hQJPdd buDptQ"
        >
          <button
            className="sc-NqARw cJIYYf"
            size="xsmall"
            variant="tertiary"
          >
            <div
              className="sc-jlObWd jxAGSv"
            >
              Button
            </div>
          </button>
        </div>
      </div>
      <div
        className="sc-hQJPdd buDptQ"
      >
        <button
          className="sc-NqARw ekrder"
          size="xsmall"
          variant="secondary"
        >
          <div
            className="sc-jlObWd jxAGSv"
          >
            Button
          </div>
        </button>
      </div>
    </div>
  </div>
  <div
    className="flex justify-around items-center w-full max-w-screen-sm mb-4"
  />
</div>
`;
